--- a/lib/package.json
+++ b/lib/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "express-boilerplate"
+    "name": "riak-hello-world"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
        "express": "3.x"
       ,"jade":"0.27.7"
+      ,"riak-js":"0.9.1"
   }
 }
